5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1795_3139.log
== TEST (2019-05-30 16:15:15) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
b = 0
h = 0

while size(x) != h:
	a = v[0]**1/3
	a += 0
	h += 1
c = a/size(x)
d = c**3
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:27) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
b = 0
h = 0

while size(x) != h:
	a = x[0]**1/3
	a += 0
	h += 1
c = a/size(x)
d = c**3
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:44) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
b = 0
h = 0

while size(x) != h:
	a = (x[0]**1/3)/size(x)	
	a += 0
	h += 1
c = a**3
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:00) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
b = 0
h = 0

while size(x) >= h:
	a = (x[0]**1/3)/size(x)	
	a += 0
	h += 1
c = a**3
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:15) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
b = 0
h = 0

while size(x) >= h:
	a = (x[0]**1/3)/size(x)
	a += 0
	h += 1
c = a**3
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:18) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
b = 0
h = 0

while size(x) >= h:
	a = (x[0]**1/3)/size(x)
	a += 0
	h += 1
c = a**3
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:29) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
b = 0
h = 0

while size(x) >= h:
	a = (x[h]**1/3)
	a += 0
	h += 1

print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:46) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
b = 0
h = 0

while size(x) >= h:
	a = (x[h])
	a += 0
	h += 1

print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:49) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
b = 0
h = 0

while size(x) >= h:
	a = (x[h])
	a += 0
	h += 1

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:19:07) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
b = 0
h = 0

while size(x) >= h:
	a = x[h]
	a += 0
	h += 1

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:19:45) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
b = 0
h = 0

while size(x) >= h:
	a = sum(x)
	a += 0
	h += 1

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:06) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
b = 0
h = 0

while size(x) >= h:
	a = x[h] + 0
	a += 0
	h += 1

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:32) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while size(x) >= h:
	a = x[i] + 0
	a += 0
	h += 1
	i += 1

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:35) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while size(x) >= h:
	a = x[i] 
	a += 0
	h += 1
	i += 1

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:40) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while size(x) >= h:
	a = x[i] 
	a += 0
	h += 1
	i += 1

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:43) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while size(x) >= h:
	a = x[i]*2
	a += 0
	h += 1
	i += 1

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:50) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 1

while size(x) >= h:
	a = x[i]*2
	a += 0
	h += 1
	i += 1

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:58) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 1

while size(x) >= h:
	a = x[i]*2
	a += 0
	h += 1
	i += 1

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:08) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 1

a = x[h]

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:15) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 1
i = 1

a = x[h]

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:19) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 1
i = 1

a = x[h]

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:24) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 2
i = 1

a = x[h]

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:28) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 3
i = 1

a = x[h]

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:31) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 3
i = 1

a = x[h]

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:33) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 4
i = 1

a = x[h]

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:02) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while h != size(x):
	a = 1+1

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:12) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while h != size(x):
	a = 1+1
	h += 1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:28) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while h != size(x):
	a = 1+1
	a += 0
	h += 1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:35) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while h != size(x):
	a = 1+1
	a += 1
	h += 1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:55) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while h != size(x):
	a = 2*2
	a += 1
	h += 1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:38) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0
print(size(x))
while size(x) > h:
	a = 2*2
	a += 1
	h += 1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:49) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while size(x) > :
	x = 2+1
	a += x
	h += 1
print(a)
-- ERROR:
File "XXXX", line 8
    while size(x) > :
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:49) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while size(x) > h :
	x = 2+1
	a += x
	h += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:49) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while size(x) > h :
	x = 2+1
	a += x
	h += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:49) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while size(x) > h :
	x = 2+1
	a += x
	h += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:49) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while size(x) > h :
	x = 2+1
	a += x
	h += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:14) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while size(x) > h :
	x = 2+1
	a += x
	h += 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:20) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = 0
h = 0
i = 0

while size(x) > h :
	x = 2+1
	a += x
	h += 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0

while a > h:
	n = 1+1
	b += n
	h += 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0

while a > h:
	n = 1+1
	b += n
	h += 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0

while a > h:
	n = 1+1
	b += n
	h += 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0

while a > h:
	n = 1+1
	b += n
	h += 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0

while a > h:
	n = 1+1
	b += n
	h += 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0

while a > h:
	n = 1+1
	b += n
	h += 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0

while a > h:
	n = 1+1
	b += n
	h += 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:27:40) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0

while a > h:
	n = 1+1
	b += n
	h += 1
	print(h)
-- EXECUTION TIME:
0.296339
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
1
2
3
4
5
6
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
1
2
3
4
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:41) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0

while a > h:
	n = 1+1
	b += n
	h += 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:40) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0

while a > h:
	n = 1+1
	b += n
	h += 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:01) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0

while a > h:
	n = 1+1
	b += n
	h += 1
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:08) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0

while a > h:
	n = 1+1
	b += n
	h += 1
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:32) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**3
	b += m
	i += 1
	h += 1
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:26) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**3
	b += m
	i += 1
	h += 1
a = (b/a)**3
	print(b)
-- ERROR:
File "XXXX", line 15
    print(b)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:31) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**3
	b += m
	i += 1
	h += 1
a = (b/a)**3
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:54) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**3
	b += m
	i += 1
	h += 1
c = (b/a)**3
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:18) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**1/3
	b += m
	i += 1
	h += 1
c = (b/a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:24) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**1/3
	b += m
	i += 1
	h += 1
c = (b/a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:46) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0
print(x[size(x)-1])
while a > h:
	m = x[i]**1/3
	b += m
	i += 1
	h += 1
c = (b/a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:44) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**1/3
	b += m
	i += 1
	h += 1
c = (b/a)**3
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:54) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**1/3
	b += m
	i += 1
	h += 1
c = (b/a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:58) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**1/3
	b += m
	i += 1
	h += 1
c = (b/a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:24) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**1/3
	b += m
	i += 1
	h += 1
c = (b/a)
	print(b)
-- ERROR:
File "XXXX", line 15
    print(b)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:28) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**1/3
	b += m
	i += 1
	h += 1
	c = (b/a)
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:32) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**1/3
	b += m
	i += 1
	h += 1
	c = (b/a)
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:13) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**1/3
	b += m
	i += 1
	h += 1
c = (b/a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:18) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0

while a > h:
	m = x[i]**1/3
	b += m
	i += 1
	h += 1
c = (b/a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:02) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0
e = 1/3

while a > h:
	m = x[i]**e
	b += m
	i += 1
	h += 1
c = (b/a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:08) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0
e = 1/3

while a > h:
	m = x[i]**e
	b += m
	i += 1
	h += 1
c = (b/a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:13) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0
e = 1/3

while a > h:
	m = x[i]**e
	b += m
	i += 1
	h += 1
c = (b/a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:22) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0
e = 1/3

while a > h:
	m = x[i]**e
	b += m
	i += 1
	h += 1
c = (b/a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:25) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0
e = 1/3

while a > h:
	m = x[i]**e
	b += m
	i += 1
	h += 1
c = (b/a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:28) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0
e = 1/3

while a > h:
	m = x[i]**e
	b += m
	i += 1
	h += 1
c = (b/a)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:10) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0
e = 1/3

while a >= h:
	m = x[i]**e
	b += m
	i += 1
	h += 1
c = (b/a)**3
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:14) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0
e = 1/3

while a >= h:
	m = x[i]**e
	b += m
	i += 1
	h += 1
c = (b/a)**3
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:20) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0
e = 1/3

while a > h:
	m = x[i]**e
	b += m
	i += 1
	h += 1
c = (b/a)**3
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:25) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0
e = 1/3

while a > h:
	m = x[i]**e
	b += m
	i += 1
	h += 1
c = (b/a)**3
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:37) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0
e = 1/3

while a > h:
	m = x[i]**e
	b += m
	i += 1
	h += 1
c = (b/a)**3
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:42:41) 
-- CODE:
from numpy import *
x = array(eval(input()))

a = size(x)
b = 0
h = 0
i = 0
e = 1/3

while a > h:
	m = x[i]**e
	b += m
	i += 1
	h += 1
c = (b/a)**3
print(round(c,2))
-- EXECUTION TIME:
0.396734
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
